Fix _config.yml baseurl and url for GitHub Pages

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,8 @@
 title: "InvestTrack"
 description: "A Learning Tool to Follow Investors and Market Trends"
+
+url: "https://hanover-cs.github.io"
 baseurl: "/HC26-Raihan-Md-Hamim-Senior-Project"
-url: "" 
 
 remote_theme: pages-themes/cayman
 
