--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 title: "InvestTrack"
 description: "A Learning Tool to Follow Investors and Market Trends"
 baseurl: "/HC26-Raihan-Md-Hamim-Senior-Project"
-url: "" 
+url: ""
 
 remote_theme: pages-themes/cayman
 
@@ -12,3 +12,12 @@ plugins:
 relative_links:
   enabled: true
   collections: true
+
+# Navigation links
+nav:
+  - title: "Home"
+    url: /
+  - title: "Proposal"
+    url: /proposal
+  - title: "Annotated Bibliography"
+    url: /annotated
