--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,13 +1,3 @@
-# frozen_string_literal: true
-
 source "https://rubygems.org"
 
-# gem "rails"
-
-gem "jekyll", "~> 4.4"
-
-gem "jekyll-relative-links", "~> 0.7.0"
-
-gem "jekyll-remote-theme", "~> 0.4.3"
-
-gem "jekyll-seo-tag", "~> 2.8"
+gem "github-pages", group: :jekyll_plugins
