--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,9 @@
 title: "InvestTrack"
 description: "A Learning Tool to Follow Investors and Market Trends"
 baseurl: "/HC26-Raihan-Md-Hamim-Senior-Project"
-url: ""
+url: "" 
 
-theme: null
-
+remote_theme: pages-themes/cayman
 
 plugins:
   - jekyll-relative-links
@@ -13,12 +12,3 @@ plugins:
 relative_links:
   enabled: true
   collections: true
-
-# Navigation links
-nav:
-  - title: "Home"
-    url: /
-  - title: "Proposal"
-    url: /proposal
-  - title: "Annotated Bibliography"
-    url: /annotated
