Restore Cayman theme for colorful design

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,13 +1,12 @@
 title: "InvestTrack"
 description: "A Learning Tool to Follow Investors and Market Trends"
 baseurl: "/HC26-Raihan-Md-Hamim-Senior-Project"
-url: "" 
+url: "https://hanover-cs.github.io"
 
-remote_theme: pages-themes/cayman
+theme: jekyll-theme-cayman
 
 plugins:
   - jekyll-relative-links
-  - jekyll-remote-theme
 
 relative_links:
   enabled: true
